--- a/Sidebar/style.css
+++ b/Sidebar/style.css
@@ -112,7 +112,7 @@ ul {
     grid-template-rows: auto 1fr auto;
     row-gap: 1rem;
     box-shadow: 0px 2px 15px #808080;
-    transition: var(--transition);
+    transition:  all .3 linear;
     transform: translate(-100%);
 }
 
