--- a/Sidebar/style.css
+++ b/Sidebar/style.css
@@ -16,9 +16,8 @@ ul {
     background: transparent;
     border-color: transparent;
     color: hsl(288.4deg 73.53% 40%);
-    transition: all 0.3s linear;
     cursor: pointer;
-    animation: bounce 2s ease-in-out infinite;
+    animation: bounce 2s infinite;
 }
 
 .sidebar-toggle:hover {
@@ -43,17 +42,18 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1.5rem;
+    padding: 1rem 2rem 1rem;
 }
 
 .close-btn {
-    font-size: 1.75rem;
+    font-size: 2.75rem;
     background: transparent;
     border-color: transparent;
     color: hsl(205, 78%, 60%);
     transition: all 0.3s linear;
     cursor: pointer;
     color: hsl(360, 67%, 44%);
+    margin-top: -1rem;
 }
 
 .close-btn:hover {
@@ -62,9 +62,11 @@ ul {
 }
 
 .logo {
-    justify-self: center;
     height: 100px;
-    width: 180px
+    width: 180px;
+    margin-left: -3rem;
+    margin-top: -.5rem;
+    
 }
 
 .links a {
@@ -112,7 +114,6 @@ ul {
     grid-template-rows: auto 1fr auto;
     row-gap: 1rem;
     box-shadow: 0px 2px 15px #808080;
-    transition:  all .3 linear;
     transform: translate(-100%);
 }
 
