--- a/ScrollLinker/style.css
+++ b/ScrollLinker/style.css
@@ -1,65 +1,5 @@
-/*
-=============== 
-Fonts
-===============
-*/
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
 
-/*
-=============== 
-Variables
-===============
-*/
-
-:root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(205, 86%, 17%);
-    --clr-primary-2: hsl(205, 77%, 27%);
-    --clr-primary-3: hsl(205, 72%, 37%);
-    --clr-primary-4: hsl(205, 63%, 48%);
-    /* primary/main color */
-    --clr-primary-5: #49a6e9;
-    /* lighter shades of primary color */
-    --clr-primary-6: hsl(205, 89%, 70%);
-    --clr-primary-7: hsl(205, 90%, 76%);
-    --clr-primary-8: hsl(205, 86%, 81%);
-    --clr-primary-9: hsl(205, 90%, 88%);
-    --clr-primary-10: hsl(205, 100%, 96%);
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(209, 61%, 16%);
-    --clr-grey-2: hsl(211, 39%, 23%);
-    --clr-grey-3: hsl(209, 34%, 30%);
-    --clr-grey-4: hsl(209, 28%, 39%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 23%, 60%);
-    --clr-grey-7: hsl(211, 27%, 70%);
-    --clr-grey-8: hsl(210, 31%, 80%);
-    --clr-grey-9: hsl(212, 33%, 89%);
-    --clr-grey-10: hsl(210, 36%, 96%);
-    --clr-white: #fff;
-    --clr-red-dark: hsl(360, 67%, 44%);
-    --clr-red-light: hsl(360, 71%, 66%);
-    --clr-green-dark: hsl(125, 67%, 44%);
-    --clr-green-light: hsl(125, 71%, 66%);
-    --clr-secondary: hsla(182, 63%, 54%);
-    --clr-black: #222;
-    --ff-primary: "Roboto", sans-serif;
-    --ff-secondary: "Open Sans", sans-serif;
-    --transition: all 0.3s linear;
-    --spacing: 0.25rem;
-    --radius: 0.5rem;
-    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    --max-width: 1170px;
-    --fixed-width: 620px;
-}
-
-/*
-=============== 
-Global Styles
-===============
-*/
 html {
     scroll-behavior: smooth;
 }
@@ -73,9 +13,9 @@ html {
 }
 
 body {
-    font-family: var(--ff-secondary);
-    background: var(--clr-grey-10);
-    color: var(--clr-grey-1);
+    font-family: "Open Sans", sans-serif;
+    background: #f7f7f7;
+    color: #292929;
     line-height: 1.5;
     font-size: 0.875rem;
 }
@@ -90,11 +30,11 @@ a {
 
 
 h4 {
-    letter-spacing: var(--spacing);
+    letter-spacing: 0.25rem;
     text-transform: capitalize;
     line-height: 1.25;
     margin-bottom: 0.75rem;
-    font-family: var(--ff-primary);
+    font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -107,7 +47,7 @@ h2 {
 
 p {
     margin-bottom: 1.25rem;
-    color: var(--clr-grey-5);
+    color: #848484;
 }
 
 
@@ -115,18 +55,18 @@ p {
 .btn {
     text-transform: uppercase;
     background: transparent;
-    color: var(--clr-black);
+    color: #222;
     padding: 0.375rem 0.75rem;
-    letter-spacing: var(--spacing);
+    letter-spacing: 0.25rem;
     display: inline-block;
-    transition: var(--transition);
+    transition: all 0.3s linear;
     font-size: 0.875rem;
-    border: 2px solid var(--clr-black);
+    border: 2px solid #222;
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-    border-radius: var(--radius);
-    color: var(--clr-white);
-    border-color: var(--clr-white);
+    border-radius: 0.5rem;
+    color: #fff;
+    border-color: #fff;
     border-radius: 0;
     padding: 0.5rem 1rem;
 }
@@ -134,12 +74,12 @@ p {
 
 .btn:hover {
     background: #17140561;
-    color: var(--clr-secondary);
+    color: #6c63ff;
     cursor: pointer;
 }
 
 nav {
-    background: var(--clr-white);
+    background: #fff;
     padding: 1rem 1.5rem;
 }
 
@@ -148,16 +88,16 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    background: var(--clr-white);
-    box-shadow: var(--light-shadow);
+    background: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .fixed-nav .links a {
-    color: var(--clr-grey-1);
+    color: #292929;
 }
 
 .fixed-nav .links a:hover {
-    color: var(--clr-secondary);
+    color: #6c63ff;
 }
 
 .nav-header {
@@ -168,15 +108,15 @@ nav {
 
 .nav-toggle {
     font-size: 1.5rem;
-    color: var(--clr-grey-1);
+    color: #292929;
     background: transparent;
     border-color: transparent;
-    transition: var(--transition);
+    transition: all 0.3s linear;
     cursor: pointer;
 }
 
 .nav-toggle:hover {
-    color: var(--clr-secondary);
+    color: #6c63ff;
 }
 
 .logo {
@@ -186,7 +126,7 @@ nav {
 .links-container {
     height: 0;
     overflow: hidden;
-    transition: var(--transition);
+    transition: all 0.3s linear;
 }
 
 .show-links {
@@ -194,19 +134,19 @@ nav {
 }
 
 .links a {
-    background: var(--clr-white);
-    color: var(--clr-grey-5);
+    background: #fff;
+    color: #848484;
     font-size: 1.1rem;
     text-transform: capitalize;
-    letter-spacing: var(--spacing);
+    letter-spacing: 0.25rem;
     display: block;
-    transition: var(--transition);
+    transition: all 0.3s linear;
     font-weight: bold;
     padding: 0.75rem 0;
 }
 
 .links a:hover {
-    color: var(--clr-grey-1);
+    color: #292929;
 }
 
 @media screen and (min-width: 800px) {
@@ -241,26 +181,26 @@ nav {
 
     .links a {
         background: transparent;
-        color: var(--clr-white);
+        color: #fff;
         font-size: 1.1rem;
         text-transform: capitalize;
-        letter-spacing: var(--spacing);
+        letter-spacing: 0.25rem;
         display: block;
-        transition: var(--transition);
+        transition: all 0.3s linear;
         margin: 0 1rem;
         font-weight: bold;
         padding: 0;
     }
 
     .links a:hover {
-        color: var(--clr-white);
+        color: #fff;
     }
 }
 
 
 header {
     min-height: 100vh;
-    background: linear-gradient(rgb(22 96 170 / 90%), rgba(0, 0, 0, 0.7)), url(./hero-bcg.jpeg) center / cover no-repeat;
+    background: linear-gradient(rgb(22 96 170 / 90%), rgba(0, 0, 0, 0.7)), center / cover no-repeat;
 }
 
 .title {
@@ -275,12 +215,12 @@ header {
 }
 
 .container h1 {
-    color: var(--clr-white);
+    color: #fff;
     text-transform: uppercase;
 }
 
 .container p {
-    color: var(--clr-white);
+    color: #fff;
     max-width: 25rem;
     margin: 0 auto;
     margin-bottom: 1.25rem;
@@ -298,7 +238,7 @@ header {
 }
 
 .title span {
-    color: var(--clr-secondary);
+    color: #6c63ff;
 }
 
 #about,
@@ -308,19 +248,19 @@ header {
 }
 
 #services {
-    background: var(--clr-white);
+    background: #fff;
 }
 
 footer {
-    background: var(--clr-grey-1);
+    background: #292929;
     padding: 2rem 1rem;
 }
 
 footer p {
-    color: var(--clr-white);
+    color: #fff;
     text-align: center;
     text-transform: capitalize;
-    letter-spacing: var(--spacing);
+    letter-spacing: 0.25rem;
     margin-bottom: 0;
 }
 
@@ -329,13 +269,13 @@ footer p {
     position: fixed;
     bottom: 3rem;
     right: 3rem;
-    background: var(--clr-secondary);
+    background: hsla(182, 63%, 54%);
     width: 2rem;
     height: 2rem;
     display: grid;
     place-items: center;
-    border-radius: var(--radius);
-    color: var(--clr-white);
+    border-radius: .25rem;
+    color: #fff;
     animation: bounce 2s ease-in-out infinite;
     visibility: hidden;
     z-index: -100;
